--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-DataContextModelSnapshot.cs
-
 appsettings.json
+
+Migrations/
