--- a/OLX-copy/appsettings.json
+++ b/OLX-copy/appsettings.json
@@ -1,5 +1,7 @@
 {
+  "DatabaseProvider": "MySql",
   "ConnectionStrings": {
-    "LocalDb": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=OLX_copy;Integrated Security=True"
+    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=OLX_Copy;Trusted_Connection=True;",
+    "MySql": "server=localhost;port=3306;database=olx;uid=root;password=root"
   }
 }
