--- a/OLX-copy/appsettings.json
+++ b/OLX-copy/appsettings.json
@@ -1,5 +1,6 @@
 {
+  "DatabaseProvider": "MySql",
   "ConnectionStrings": {
-    "LocalDb": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=OLX_copy;Integrated Security=True"
+    "MySql": "server=localhost;port=3306;database=olx;uid=root;password=INnoVation"
   }
 }
