Added email validation and password restrictions

--- a/OLX-copy/appsettings.json
+++ b/OLX-copy/appsettings.json
@@ -2,6 +2,6 @@
   "DatabaseProvider": "MySql",
   "ConnectionStrings": {
     "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=OLX_Copy;Trusted_Connection=True;",
-    "MySql": "server=localhost;port=3306;database=olx;uid=root;password=root"
+    "MySql": "server=localhost;port=3306;database=olx;uid=root;password=INnoVation"
   }
 }
